<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Menu">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginEnd="32dp"
            android:autofillHints="@string/distancia"
            android:hint="@string/distancia"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:helperText="Distancia en kilómetros, por defecto 1"
            app:helperTextTextColor="@color/secondaryDarkColor"
            >

            <EditText
                android:id="@+id/edtxt_distancia"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="numberDecimal"

                />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/b_activar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:onClick="setB_agregar"
            android:text="@string/activar"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            app:cornerRadius="30dp"
            />

        <Space
            android:layout_width="match_parent"
            android:layout_height="10dp" />

        <Button
            android:id="@+id/b_desactivar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:onClick="setB_buscar"
            android:text="@string/desactivar"
            android:textColor="@android:color/background_light"
            android:layout_marginStart="32dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="32dp"
            android:layout_marginBottom="10dp"
            android:textSize="30sp"
            app:cornerRadius="30dp"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>